--- a/base/templates/base/nosotros.html
+++ b/base/templates/base/nosotros.html
@@ -11,7 +11,7 @@
 {% block content %}
 <!-- Quienes Somos -->
 <section class="container" id="nosotros">
-    <h1 class="about-name">{% trans 'Quiénes Somos' %}</h1>
+    <h1 class="titulo-principal">{% trans 'Quiénes Somos' %}</h1>
     <div class="container-about">
       
       <div class="about-content">
