--- a/history/templates/history/category.html
+++ b/history/templates/history/category.html
@@ -7,7 +7,7 @@
 
 {% block content %}
 <main class="container">
-  <h1 class="about-name">{% trans 'Categorías' %}</h1>
+  <h1 class="titulo-principal">{% trans 'Categorías' %}</h1>
   <!-- Barra de navegación de categorías con estilos personalizados -->
   <nav class="category-nav-historias text-center mb-4">
     <a href="{% url 'historias' %}" class="link-historias{% if not category %} active{% endif %}">
