--- a/history/templates/history/historias.html
+++ b/history/templates/history/historias.html
@@ -9,7 +9,7 @@
 
 {% block content %}
 <main class="container-fluid">
-  <h1 class="about-name">{% trans 'Historias' %}</h1>
+  <h1 class="titulo-principal">{% trans 'Historias' %}</h1>
 
   <!-- Barra de navegación de categorías con estilos personalizados -->
   <nav class="category-nav-historias text-center">
