--- a/history/templates/history/video.html
+++ b/history/templates/history/video.html
@@ -9,7 +9,7 @@
 
 {% block content %}
 <main class="container">
-  <h1 class="about-name">{% trans 'Video' %}</h1>
+  <h1 class="titulo-principal">{% trans 'Video' %}</h1>
   <section class="row">
     <div class="col-xl-12">
       <div class="row align-items-center">
