--- a/history/templates/history/videos.html
+++ b/history/templates/history/videos.html
@@ -8,7 +8,7 @@
 
 {% block content %}
 <main class="container">
-  <h1 class="about-name">{% trans 'Videos' %}</h1>
+  <h1 class="titulo-principal">{% trans 'Videos' %}</h1>
   <div class="grid-projects">
     {% for post in posts %}
         {% for category in post.category.all %}
