--- a/image/templates/image/fotografia.html
+++ b/image/templates/image/fotografia.html
@@ -10,7 +10,7 @@
 
 {% block content %}
 <main class="container">
-  <h1 class="about-name">{% trans 'Fotografía' %}</h1>
+  <h1 class="titulo-principal">{% trans 'Fotografía' %}</h1>
   <div class="content-container">
     <p>{{ post.content|linebreaks }}</p>
     <h2 class="subtitle">{{ post.title }}</h2>
