--- a/image/templates/image/fotografias.html
+++ b/image/templates/image/fotografias.html
@@ -12,7 +12,7 @@
 
 {% block content %}
 <main class="container">
-  <h1 class="about-name">{% trans 'Fotografías' %}</h1>
+  <h1 class="titulo-principal">{% trans 'Fotografías' %}</h1>
   <section class="post-list-fotografias">
     <div class="category-content-fotografias">
       {% for post in posts %}
