--- a/base/static/base/css/videos.css
+++ b/base/static/base/css/videos.css
@@ -81,28 +81,58 @@
 
 
 
-/* 
-Perdido */
 
 
 
 
 /* Title Styling */
-h1 {
-  font-size: 2.5rem;
-  color: #000000;
-  text-align: center;
-  margin-bottom: 20px;
-}
 
 
-/* .post-date {
+
+.post-date {
   font-size: 0.9rem;
   color: #777;
   margin-bottom: 5px;
   text-align: center;
-}  */
+} 
 
+.autor {
+    text-align: center;
+    color: #343434; 
+    text-decoration: none; 
+    margin: 0 5px;
+    font-weight: normal
+}
+
+
+
+/* Subrayado al pasar el ratón sobre el enlace */
+.autor:hover {
+    text-decoration: underline; 
+    color: rgb(51, 51, 51);
+} 
+
+.historia-contenido {
+    -webkit-hyphens: auto;
+    -ms-hyphens: auto;
+    hyphens: auto;
+    word-wrap: break-word;
+
+}
+
+h1.titulo-principal {
+    font-weight: 100;
+    font-size: 45px; /* Aumentar tamaño de fuente */
+    margin-bottom: 100px; /* Ajustar margen para mejor espaciado */
+    position: relative;
+    text-transform: capitalize;
+    margin-top: 30px;
+    
+}
+
+h1 {
+    text-align: center;
+  }
 
 
 
