--- a/project/templates/project/proyectos.html
+++ b/project/templates/project/proyectos.html
@@ -8,7 +8,7 @@
 
 {% block content %}
 <main class="container">
-  <h1 class="about-name">{% trans 'Proyectos' %}<h1>
+  <h1 class="titulo-principal">{% trans 'Proyectos' %}<h1>
   {% for post in posts %}
   <div class="container-project">
     <div class="project-image">
