--- a/base/templates/base/index.html
+++ b/base/templates/base/index.html
@@ -63,7 +63,7 @@
 
 <section class="container-form" id="contacto">
   <h1 class="about-name title-name">{% trans 'Contacto' %}</h1>
-  <div class="container-fluid contenedor-flex">
+  <div class="container contenedor-flex">
     <!-- Contenedor del formulario de contacto -->
     <div class="contacto-formulario">
       <!-- Formulario de contacto -->
