--- a/history/templates/history/videos.html
+++ b/history/templates/history/videos.html
@@ -11,18 +11,18 @@
   <h1 class="titulo-principal">{% trans 'Videos' %}</h1>
   <div class="grid-projects">
     {% for post in posts %}
-        {% for category in post.category.all %}
-          {% if category.name == "Más" %}
-              <a href="{% url 'historia' post.id %}" class="card-link">
-                <div class="card-project" style="--i:url('{{ post.image.url }}')">
-                  <div class="content-project">
-                    <h2>{{ post.title }}</h2>
-                  </div>
-                </div>
-              </a>
-          {% endif %}
-        {% endfor %}
+      {% for category in post.category.all %}
+        {% if category.name == "Más" or category.name == "More" %}
+          <a href="{% url 'historia' post.id %}" class="card-link">
+            <div class="card-project" style="--i:url('{{ post.image.url }}')">
+              <div class="content-project">
+                <h2>{{ post.title }}</h2>
+              </div>
+            </div>
+          </a>
+        {% endif %}
       {% endfor %}
+    {% endfor %}
   </div>
 </main>
 
