--- a/articles/templates/articles/articulos.html
+++ b/articles/templates/articles/articulos.html
@@ -10,7 +10,7 @@
 {% block content %}
 
 <main class="container">
-  <h1 class="about-name">{% trans 'Noticias' %}</h1>
+  <h1 class="titulo-principal">{% trans 'Noticias' %}</h1>
   {% for post in posts %}
   <div class="container-project">
     <div class="project-image">
