--- a/base/templates/base/base.html
+++ b/base/templates/base/base.html
@@ -41,6 +41,7 @@
    <link rel="stylesheet" href="{% static 'base/css/carrusel.css' %}">
    <link rel="stylesheet" href="{% static 'base/css/about.css' %}">
    <link rel="stylesheet" href="{% static 'base/css/photography.css' %}">
+   <link rel="stylesheet" href="{% static 'base/css/valle.css' %}">
    
 </head>
 <body>
