--- a/history/templates/history/category.html
+++ b/history/templates/history/category.html
@@ -8,30 +8,31 @@
 {% block content %}
 <main class="container">
   <h1 class="titulo-principal">
-   {{ category.name }}
+    {{ category.name }}
   </h1>
   
   <!-- Barra de navegación de categorías con estilos personalizados -->
-  <nav class="category-nav-historias text-center mb-4">
-    <a href="{% url 'historias' %}" class="link-historias{% if not category %} active{% endif %}">
-        {% trans 'Todas' %}
-    </a>
-    <span class="separator"> | </span>
-    {% for cat in categories %}
-        <a href="{% url 'category' cat.id %}" class="link-historias{% if category and category.id == cat.id %} active{% endif %}">
-            {% trans cat.name %}
-        </a>
-        {% if not forloop.last %}
-        <span class="separator"> | </span>
-        {% endif %}
-    {% endfor %}
-  </nav>
+ <!-- Barra de navegación de categorías con estilos personalizados -->
+ <nav class="category-nav-historias text-center mb-4">
+  <a href="{% url 'historias' %}" class="link-historias{% if request.path == '/historias/' %} active{% endif %}">
+      {% trans 'Todas' %}
+  </a>
+  {% for cat in categories %}
+      <span class="separator"> | </span>
+      {% if forloop.counter == 2 %}  <!-- Asegura que el enlace del Valle de los Negros aparezca tercero -->
+          <a href="{% url 'valle' %}" class="link-historias{% if request.path == '/valle/' %} active{% endif %}">
+              {% trans 'El valle de los Negros' %}
+          </a>
+          <span class="separator"> | </span>
+      {% endif %}
+      <a href="{% url 'category' cat.id %}" class="link-historias{% if category and category.id == cat.id %} active{% endif %}">
+          {% trans cat.name %}
+      </a>
+  {% endfor %}
+</nav>
 </main>
 
-
-
 <main class="container-fluid"> 
- 
   <div class="grid-projects">
     {% for post in posts %}
       <a href="{% url 'historia' post.id %}" class="card-link">
