--- a/history/templates/history/historias.html
+++ b/history/templates/history/historias.html
@@ -12,18 +12,24 @@
   <h1 class="titulo-principal">{% trans 'Historias' %}</h1>
 
   <!-- Barra de navegación de categorías con estilos personalizados -->
-  <nav class="category-nav-historias text-center">
-    <a href="{% url 'historias' %}" class="link-historias{% if not selected_category_id %} active{% endif %}">
+<!-- Barra de navegación de categorías con estilos personalizados -->
+<nav class="category-nav-historias text-center mb-4">
+  <a href="{% url 'historias' %}" class="link-historias{% if request.path == '/historias/' %} active{% endif %}">
       {% trans 'Todas' %}
-    </a>
-    <span class="separator"> | </span>
-    {% for category in categories %}
-      <a href="{% url 'category' category.id %}" class="link-historias{% if category.id == selected_category_id %} active{% endif %}">
-        {{ category.name }}
+  </a>
+  {% for cat in categories %}
+      <span class="separator"> | </span>
+      {% if forloop.counter == 2 %}  <!-- Asegura que el enlace del Valle de los Negros aparezca tercero -->
+          <a href="{% url 'valle' %}" class="link-historias{% if request.path == '/valle/' %} active{% endif %}">
+              {% trans 'El valle de los Negros' %}
+          </a>
+          <span class="separator"> | </span>
+      {% endif %}
+      <a href="{% url 'category' cat.id %}" class="link-historias{% if category and category.id == cat.id %} active{% endif %}">
+          {% trans cat.name %}
       </a>
-      {% if not forloop.last %}<span class="separator"> | </span>{% endif %}
-    {% endfor %}
-  </nav>
+  {% endfor %}
+</nav>
 </main>
 
 <main class="container-fluid">
