--- a/base/static/base/css/valle.css
+++ b/base/static/base/css/valle.css
@@ -4,7 +4,7 @@
     height: 0;
     padding-bottom: 56.25%; /* Proporción 16:9 (para videos) */
     overflow: hidden;
-    margin-top: 190px;
+    margin-top: 10px;
 }
 
 .video-valle iframe {
@@ -13,4 +13,10 @@
     left: 0;
     width: 100%;
     height: 100%;
+}
+
+@media (max-width: 1145px) {
+    .video-valle {
+        margin-top: 10px;
+    }
 }
