--- a/history/templates/history/category.html
+++ b/history/templates/history/category.html
@@ -7,8 +7,8 @@
 
 {% block content %}
 <main class="container">
-  <h1 class="titulo-principal">
-    {{ category.name }}
+  <h1 class="titulo-categoria">
+    {% trans 'Historias' %} / <span class="subtitle-categoria">{{ category.name }}</span>
   </h1>
   
   <!-- Barra de navegación de categorías con estilos personalizados -->
@@ -21,7 +21,7 @@
       <span class="separator"> | </span>
       {% if forloop.counter == 2 %}  <!-- Asegura que el enlace del Valle de los Negros aparezca tercero -->
           <a href="{% url 'valle' %}" class="link-historias{% if request.path == '/valle/' %} active{% endif %}">
-              {% trans 'El valle de los Negros' %}
+              {% trans 'El Valle de los Negros' %}
           </a>
           <span class="separator"> | </span>
       {% endif %}
