--- a/history/templates/history/historias.html
+++ b/history/templates/history/historias.html
@@ -9,7 +9,7 @@
 
 {% block content %}
 <main class="container">
-  <h1 class="titulo-principal">{% trans 'Historias' %}</h1>
+  <h1 class="titulo-categoria">{% trans 'Historias' %}</h1>
 
   <!-- Barra de navegación de categorías con estilos personalizados -->
 <!-- Barra de navegación de categorías con estilos personalizados -->
@@ -21,7 +21,7 @@
       <span class="separator"> | </span>
       {% if forloop.counter == 2 %}  <!-- Asegura que el enlace del Valle de los Negros aparezca tercero -->
           <a href="{% url 'valle' %}" class="link-historias{% if request.path == '/valle/' %} active{% endif %}">
-              {% trans 'El valle de los Negros' %}
+              {% trans 'El Valle de los Negros' %}
           </a>
           <span class="separator"> | </span>
       {% endif %}
