--- a/base/templates/base/nosotros.html
+++ b/base/templates/base/nosotros.html
@@ -10,7 +10,7 @@
 
 {% block content %}
 <!-- Quienes Somos -->
-<section class="container" id="nosotros">
+<section class="container">
     <h1 class="titulo-principal">{% trans 'Quiénes Somos' %}</h1>
     <div class="container-about">
       
@@ -31,7 +31,7 @@
       </div>
       <div class="about-image">
         <div class="about-img">
-          <img src="{% static 'base/img/nosotros.png' %}">
+          <img src="{% static 'base/img/012.jpg' %}">
         </div>
       </div>
     </div>
