--- a/base/static/base/css/category.css
+++ b/base/static/base/css/category.css
@@ -98,7 +98,7 @@
     padding: 10px;
     width: 100%;
     margin: 0 auto; /* Centrado horizontal */
-    margin-top: -60px; 
+    margin-top: 10px; 
 }
 
 .category-nav-historias .link-historias {
@@ -140,22 +140,52 @@
     font-size: 30px;
 }
 
-.titulo-categoria {
-    font-weight: 100;
-    font-size: 45px; /* Aumentar tamaño de fuente */
-    margin-bottom: 100px; /* Ajustar margen para mejor espaciado */
-    position: relative;
-    text-transform: capitalize;
-    margin-top: 30px;
+.panoramic-image {
+    overflow: hidden;
+    margin-bottom: 20px; /* Espacio inferior */
 }
 
+.panoramic-image img {
+    width: 100%;
+    height: 300px;
+    display: block;
+    object-fit: cover;
+    margin: 0; /* Asegura que no haya márgenes */
+    padding: 0; /* Asegura que no haya relleno */
+}
+
+.titulo-categoria {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white; /* Color del texto del título */
+    font-size: 24px; /* Tamaño del texto del título */
+    background-color: rgba(0, 0, 0, 0.5); /* Fondo semi-transparente */
+    padding: 10px;
+    border-radius: 5px;
+
+}
 @media (max-width: 1000px) {
     .category-nav-historias {
         padding: 6px;
-        top: 10px; /* Ajustar la distancia vertical deseada */
+        top: 2px; /* Ajustar la distancia vertical deseada */
         display: flex; /* Usar flexbox */
         flex-direction: column; /* Cambiar a disposición en columna */
+        align-items: center; /* Centrar horizontalmente los elementos */
+        margin-top: 20px;
+        margin-bottom: 10px;
     }
+    .titulo-categoria {
+        position: absolute; /* Establece posición absoluta para el título */
+        left: 50%; /* Centra horizontalmente */
+        transform: translateX(-50%); /* Centra horizontalmente */
+        color: white; /* Color del texto del título */
+        background-color: rgba(0, 0, 0, 0.5); /* Fondo semi-transparente */
+        padding: 10px; /* Espacio interno */
+        border-radius: 5px; /* Bordes redondeados */
+    }
+
 
     .category-nav-historias .link-historias {
         padding: 5px 10px; /* Ajustar el padding según sea necesario para dispositivos más pequeños */
@@ -163,14 +193,34 @@
         display: inline-block; /* Asegura que el ancho del enlace se ajuste al contenido */
     }
 
+    /* Ajusta el tamaño de fuente y margen inferior para los subtítulos */
     .sub-title,
     .subtitle-categoria,
     .titulo-categoria {
-        font-size: 24px; /* Reducir el tamaño de fuente para dispositivos más pequeños */
-        margin-bottom: 50px; /* Ajustar el margen inferior según sea necesario para dispositivos más pequeños */
+        font-size: 15px; /* Asegura que el tamaño de fuente sea legible en dispositivos más pequeños */
+        margin-bottom: 10px; /* Ajusta el margen inferior según sea necesario para dispositivos más pequeños */
+        text-align: center; /* Centra el texto horizontalmente */
     }
+    
 
     .separator {
-        display: none; /* Ocultar el separador en pantallas pequeñas */
+        display: none; /* Oculta el separador en pantallas pequeñas */
+    }
+
+    .panoramic-image {
+        overflow: hidden;
+        margin-bottom: 20px; /* Espacio inferior */
+        position: relative; /* Añade posición relativa para el contenedor */
+    }
+    
+    .panoramic-image img {
+        width: 100%;
+        height: 200px;
+        display: block;
+        object-fit: cover;
+        margin: 0; /* Asegura que no haya márgenes */
+        padding: 0; /* Asegura que no haya relleno */
     }
 }
+
+  
