--- a/base/static/base/css/contact.css
+++ b/base/static/base/css/contact.css
@@ -49,9 +49,73 @@ box-sizing: border-box; /* Incluye padding y borde en el ancho total */
 /* Contacto Inicio */
 .container-form {
     background-color: black;
-    color: rgb(255, 255, 255); /* Cambia el color del texto si es necesario */
+    color: rgb(0, 0, 0); /* Cambia el color del texto si es necesario */
     padding: 20px; /* Ajusta el padding según sea necesario */
     margin-top: 50px; /* Empuja al final de la página */
     width: 100%;
     
+}
+
+/* Estilos para todos los inputs de texto, email y textarea */
+#contact-form input[type="text"],
+#contact-form input[type="email"],
+#contact-form textarea {
+    display: block;
+    width: 100%;
+    height: calc(1.5em + .75rem + 2px);
+    padding: .375rem .75rem;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #f9f9f8;
+    border-radius: 0;
+    background-color: #000000;
+    background-clip: padding-box;
+    transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
+}
+
+#contact-form input[type="text"]:focus,
+#contact-form input[type="email"]:focus,
+#contact-form textarea:focus {
+    color: #ffffff;
+    background-color: #1f1f1f;
+    border-color: #ffffff;
+    outline: 0;
+    box-shadow: 0 0 0 .2rem rgba(0,123,255,.25);
+}
+
+/* Ajustes para eliminar la separación entre los campos */
+#contact-form .form-group {
+    margin: 0;
+    padding: 0;
+}
+#contact-form input[type="text"]::placeholder,
+#contact-form input[type="email"]::placeholder,
+#contact-form textarea::placeholder {
+    color: #fff; /* Color del placeholder */
+}
+
+#contact-form input[type="text"] + input[type="email"],
+#contact-form input[type="email"] + textarea {
+    margin-top: -1px; /* Asegura que no haya separación entre los campos */
+}
+/* Ajustes específicos para el textarea */
+#contact-form textarea {
+  height: auto; /* Permitir que el height sea dinámico */
+  min-height: calc(1.5em + .75rem + 2px); /* Asegura un mínimo alto similar a los inputs */
+  resize: vertical; /* Permitir redimensionamiento vertical */
+}
+
+/* Estilo para el botón de enviar */
+#contact-form input[type="submit"] {
+    background-color: #5f5f5f;
+    color: white;
+    padding: .5rem 1rem;
+    border: none;
+    cursor: pointer;
+    transition: background-color .15s ease-in-out;
+}
+
+#contact-form input[type="submit"]:hover {
+    background-color: #b8b8b8;
 }
