--- a/base/templates/base/base.html
+++ b/base/templates/base/base.html
@@ -83,10 +83,11 @@
                 <a class="nav-link nav-menu-link {% if request.path == '/nosotros/' %}nav-menu-link_active{% endif %}" href="{% url 'nosotros' %}"">{% trans 'Nosotros' %}</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link nav-menu-link {% if request.resolver_match.url_name == 'historias' or request.resolver_match.url_name == 'historia' or request.resolver_match.url_name == 'category' or request.resolver_match.url_name == 'valle'%}nav-menu-link_active{% endif %}" 
-                href="{% url 'historias' %}">{% trans 'Historias' %}
+                <a class="nav-link nav-menu-link {% if request.resolver_match.url_name == 'category' %}nav-menu-link_active{% endif %}" href="{% url 'category' 14 %}">
+                    {% trans 'Historias' %}
                 </a>
-              </li>
+            </li>
+            
               <li class="nav-item dropdown">
                   <a class="nav-link nav-menu-link {% if request.resolver_match.url_name == 'fotografias' or request.resolver_match.url_name == 'videos' or request.resolver_match.url_name == 'videos' %}nav-menu-link_active{% endif %}" href="#" id="navbarDropdown" role="button" aria-haspopup="true" aria-expanded="false">
                       {% trans 'Colaboraciones' %}
@@ -148,7 +149,7 @@
           {% endif %}
           </li>
         </ul>
-        <p class="menu">
+        <p class="autor">
           {% load pages_extras %}
           {% get_page_list as page_list %}
           {% for page in page_list %}
