--- a/base/static/base/css/videos.css
+++ b/base/static/base/css/videos.css
@@ -97,7 +97,7 @@
 } 
 .autor {
     text-align: center;
-    color: #343434; 
+    color: #ff0000; 
     text-decoration: none; 
     margin: 0 5px;
     font-weight: normal
