--- a/history/templates/history/category.html
+++ b/history/templates/history/category.html
@@ -9,56 +9,34 @@
 
 <main>
   {% for cat in categories %}
-    {% if category and category.id == cat.id %}
-      {% if cat.image %}
-        <div class="panoramic-image">
-          <div class="category-title-container">
-            <h1 class="titulo-categoria">
-              {% trans 'Historias' %} / <span class="subtitle-categoria">{{ cat.name }}</span>
-            </h1>
-          </div>
-          <img src="{{ cat.image.url }}" alt="{{ cat.name }} Image">
+  {% if category and category.id == cat.id %}
+    {% if cat.image %}
+      <div class="panoramic-image">
+        <div class="category-title-container">
+          <h1 class="titulo-categoria">
+            {% trans 'Historias' %} / <span class="subtitle-categoria">{{ cat.name }}</span>
+          </h1>
         </div>
-      {% endif %}
+        <img src="{{ cat.image.url }}" alt="{{ cat.name }} Image">
+      </div>
     {% endif %}
-  {% endfor %}
+  {% endif %}
+{% endfor %}
 </main>
 <main class="container-fluid">
-
   <!-- Barra de navegación de categorías con estilos personalizados -->
   <nav class="category-nav-historias text-center mb-4">
-  
     {% for cat in categories %}
-      {% if forloop.counter == 3 %}
-        <!-- Asegura que el enlace del Valle de los Negros aparezca tercero -->
-        <a href="{% url 'valle' %}" class="link-historias{% if request.path == '/valle/' %}active{% endif %}">
-          {% trans 'El Valle de los Negros' %}
-        </a>
-        <span class="separator"> | </span>
-      {% endif %}
-      
-      {% if category and category.id == cat.id %}
-        <a href="{% url 'category' cat.id %}" class="link-historias active">
-          {% trans cat.name %}
-        </a>
-      {% else %}
-        <a href="{% url 'category' cat.id %}" class="link-historias">
-          {% trans cat.name %}
-        </a>
-      {% endif %}
-      
+      <a href="{% url 'category' cat.id %}" class="link-historias{% if category and category.id == cat.id %} active{% endif %}">
+        {% trans cat.name %}
+      </a>
+
       {% if not forloop.last %}
         <span class="separator"> | </span>
       {% endif %}
     {% endfor %}
-    
   </nav>
 </main>
-
-
-
-
-
 
 
 <main class="container-fluid"> 
